fix: topbar on mobile

--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -7,4 +7,4 @@
     top-padded(30px)
 
     @media (max-width: (480/basefont)rem)
-        top-padded(10px)
+        padding 0
